--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,11 @@ on:
   push:
     tags:        
       - '*' 
-      
+env:
+  # 设置 registry 地址
+  REGISTRY: ghcr.io
+  # github.repository 格式为 owner/repository
+  REPO_NAME: ${{ github.repository }}
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -21,11 +25,20 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Environment Variable
         id: vars
         run: echo "::set-output name=build_version::$(git describe --tags)"
+      - name: Extract metadata (tags, labels) for bark server
+        id: meta-docker
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.REPO_NAME }}/bark-server
+          tags: |
+            type=sha
+            type=raw,value=latest
       -
         name: Build and push
         id: docker_build
@@ -37,9 +50,8 @@ jobs:
             linux/arm
             linux/arm64
             linux/amd64
-          tags: |
-            finab/bark-server:latest
-            finab/bark-server:${{ steps.vars.outputs.build_version }}
+          tags: ${{ steps.meta-docker.outputs.tags }}
+          labels: ${{ steps.meta-docker.outputs.labels }}
           push: true
       -
         name: Image digest
